--- a/styles.css
+++ b/styles.css
@@ -9,34 +9,30 @@ html {
 
 body {
   display: table-cell;
-  vertical-align: middle;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-nav {
   padding: 0;
+  margin: 0;
 }
 
-ul {
-  list-style-type: none;
-  overflow: hidden;
-  padding: 1.2rem;
-  border: solid;
+
+.logo {
+  color: black;
+  font-size: 6rem;
 }
 
-li {
-  display: inline-block;
+.nav-item {
   background-color: #359;
-  padding: 1.2rem;
+  display: inline-flex;
 }
 
 a {
   text-decoration: none;
   color: white;
+  padding: 1rem;
 }
 
-li:hover {
+.nav-item:hover {
   background-color: black;
   cursor: pointer;
 }
