--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,24 @@ html, body {
 }
 
 html {
-  display: table;
+  display: flex;;
   margin: auto;
+  justify-content: center;
 }
 
 body {
-  display: table-cell;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
+  background-color: black;
 }
 
+.content {
+  background-color: white;
+  padding: 1.5rem;
+  margin: 1.5rem;
+}
 
 .logo {
   color: black;
@@ -43,3 +49,13 @@ a {
   padding: 1.5rem 0.9rem 3rem;
 }
 
+@media only screen and (max-width: 900px) {
+  .logo {
+    font-size: 3.59rem;
+  }
+
+  iframe {
+    width: 21rem;
+    height: 15rem;
+  }
+}
