--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,11 @@ img {
   width: 6rem;
 }
 
+footer {
+  color: white;
+  padding: 0.5rem;
+}
+
 @media only screen and (max-width: 900px) {
   .logo {
     font-size: 3.59rem;
@@ -70,5 +75,4 @@ img {
   nav {
     padding: 0.3rem;
   }
-
 }
